--- a/CSharpTraining.csproj
+++ b/CSharpTraining.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>CSharpTraining.ExceptionHandiling</StartupObject>
+    <StartupObject>CSharpTraining.QueueDemo</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -49,6 +49,8 @@
     <Compile Include="AbstractDemo.cs" />
     <Compile Include="AccessSpecifiers.cs" />
     <Compile Include="ArithmeticOps.cs" />
+    <Compile Include="ArrayDemo.cs" />
+    <Compile Include="ArrayListDemo.cs" />
     <Compile Include="ConstructorDemo.cs" />
     <Compile Include="DemoOfNew.cs" />
     <Compile Include="ExceptionHandiling.cs" />
@@ -57,6 +59,8 @@
     <Compile Include="MethodOverloading.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QueueDemo.cs" />
+    <Compile Include="StackDemo.cs" />
     <Compile Include="StringBuilderDemo.cs" />
     <Compile Include="Student.cs" />
     <Compile Include="SwitchCaseEx.cs" />
